# disorder

./: .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cli/: __init__.py  __main__.py  main.py
control_plane/: Dockerfile  alembic.ini  entrypoint.sh
control_plane/alembic/: env.py  script.py.mako
control_plane/app/: main.py
docs/: API.md  architecture.md  threat_model.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: smoke.spec.ts
frontend/scripts/: generate-types.mjs
frontend/src/: main.tsx
images/ctf-agent-sandbox/: Dockerfile  agent_prompt.txt  agent_runner.py  crypto_math_mcp.py  ctf_tooling_guide.md  flag_submit_mcp.py  flag_verify_mcp.py  ghidra_mcp.py  ida_mcp.py
notes/: CTFD_AUTO_FLAG_SUBMISSION_PLAN.md  RALPH_LOOPING_PLAN.md  RUN_CONTINUATION_PLAN.md  RUN_IMPROVEMENTS.md  SANDBOX_ENHANCEMENTS.md
scripts/: backup_minio.py  backup_postgres.py  demo_flow.py  restore_minio.py  restore_postgres.py
tests/integration/: test_smoke_mock_run.py
tests/unit/: test_agent_runner_contract.py  test_auth_service.py  test_auto_continuation_service.py  test_cli_main.py  test_crypto_math_mcp.py  test_ctfd_adapter.py  test_docker_runner_continuation.py  test_docker_runner_host_passthrough_config.py  test_docker_runner_ida_config.py  test_docker_runner_image_build.py  test_docker_runner_sandbox_env.py  test_run_schema.py  (+10 more)
(+69 files in other folders)
