[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disorder-jeopardy-ctf-harness"
version = "0.1.0"
description = "Automated Jeopardy CTF agent harness"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.4",
  "sqlalchemy>=2.0.31",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.0",
  "boto3>=1.35.0",
  "docker>=7.1.0",
  "typer>=0.12.3",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "respx>=0.21.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["control_plane*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: marks integration tests that require Docker services",
]
